@@ -40,9 +40,9 @@ plotDEGPCA.DESeqResults <-  # nolint
 
         interestingGroups(dt) <- matchInterestingGroups(dt, interestingGroups)
         alpha <- metadata(res)[["alpha"]]
-        assert(isAlpha(alpha))
         lfcThreshold <- metadata(res)[["lfcThreshold"]]
         assert(
+            isAlpha(alpha),
             isNumber(lfcThreshold),
             isNonNegative(lfcThreshold)
         )
@@ -59,10 +59,11 @@ plotDEGPCA.DESeqResults <-  # nolint
 
         # Titles.
         title <- contrastName(res)
-        subtitle <- paste0(length(deg), " genes; alpha < ", alpha)
-        if (lfcThreshold > 0L) {
-            subtitle <- paste0(subtitle, "; lfc > ", lfcThreshold)
-        }
+        subtitle <- paste0(
+            length(deg), " genes", ";  ",
+            "alpha: ", alpha, ";  ",
+            "lfcThreshold: ", lfcThreshold
+        )
 
         # Using SummarizedExperiment method here.
         rse <- as(dt, "RangedSummarizedExperiment")
