@@ -7,7 +7,8 @@
 
 ### Major changes
 
-- `plotDEGHeatmap`: Improved default color breaks.
+- `plotDEGHeatmap`: Improved default color breaks. Now defaults to
+  blue-black-yellow default color scheme (see `acidplots::blueYellow`).
 - Removed internal `.matchResults` function in favor of consistently using
   `results` instead throughout the package.
 
@@ -18,6 +19,7 @@
   `export`.
 - `plotMA`, `plotVolcano`: Now suppressing duplicate gene message returned by
   internal `Gene2Symbol` call, which isn't informative here.
+- Added `lfcThreshold` and `lfcShrink` information on plots, where applicable.
 
 
 
